html and css reset added in

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Link your CSS stylesheet -->
-    
+  <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-        Plan your Visit
+<div class=container>
+    Plan your Visit
         Learn about the Park
         Get Involved
    
@@ -35,3 +35,5 @@
       
 </body>
 </html>
+
+
