added header jpg link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 <div class="yosemite-park-guide-box">
     <header>
-      <img src="header_img.jpg"/>
+      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
       <h1>Yosemite Park Guide</h1>
        <p>Come explore California’s beautiful wilderness.</p>
        <p>Always open. Reservations are not available or required to enter the park.</p>
