added footer image accurate link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg"/>
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
     <footer>
-      <img src="footer_img.png"/>
+      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg"/>
       <div class=nav_bar>
         <nav>  
           <a href="#">Plan your Visit</a>
