--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-<div class="nav_bar">
+  <div class="nav_bar">
     <header>
       <nav>  
         <a href="#">Plan your Visit</a>
@@ -13,22 +13,26 @@
         <a href="#">Get Involved</a>
       </nav>
     </header>
-</div>
-<div class="yosemite-park-guide-box">
+  </div>
+  <div class="yosemite-park-guide-box">
     <header>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
       <h1>Yosemite Park Guide</h1>
-       <p>Come explore California’s beautiful wilderness.</p>
-       <p>Always open. Reservations are not available or required to enter the park.</p>
+        <p>Come explore California’s beautiful wilderness.</p>
+        <p>Always open. Reservations are not available or required to enter the park.</p>
     </header>
-</div>     
-<section>
-<p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+  </div>     
+  <div class="container">
+      <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-    <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
+  </div>
+  <div> 
+      <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+  <div>
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg"/>
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+      </div>
     <footer>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg"/>
       <div class=nav_bar>
