--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </div>
-  <div> 
-      <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
+  <section>
+    <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
+    <div id=fire-paragraph">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
-  <div>
+    </div>
+  <section>
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg"/>
+      <div id="bus-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
       </div>
+    </section>
     <footer>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg"/>
       <div class=nav_bar>
-        <nav>  
+        <nav>
           <a href="#">Plan your Visit</a>
           <a href="#">Learn about the Park</a>
           <a href="#">Get Involved</a>
