--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
   <section>
     <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
-    <div id=fire-paragraph">
+    <div id="fire-paragraph">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
     </div>
   <section>
