--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <div class="nav_bar">
     <header>
-      <nav>  
-        <a href="#">Plan your Visit</a>
-        <a href="#">Learn about the Park</a>
-        <a href="#">Get Involved</a>
+      <nav>
+        <a href="default.asp">Plan your Visit</a>
+        <a href="news.asp">Learn about the Park</a>
+        <a href="contact.asp">Get Involved</a>
       </nav>
     </header>
   </div>
@@ -22,7 +22,7 @@
         <p>Always open. Reservations are not available or required to enter the park.</p>
     </header>
   </div>     
-  <div id="image-container">
+  <div id="not-just-paragraph">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </div>
