added header menu information

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <div class="nav_bar">
     <header>
       <nav>
-        <a href="default.asp">Plan your Visit</a>
-        <a href="news.asp">Learn about the Park</a>
-        <a href="contact.asp">Get Involved</a>
+        <ul>
+        <li><a href="default.asp">Plan your Visit</a></li>
+        <li><a href="news.asp">Learn about the Park</a></li>
+        <li><a href="contact.asp">Get Involved</a></li>
+        </ul>
       </nav>
     </header>
   </div>
