--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   <div class="nav_bar">
     <header>
       <nav>
-        <ul>
-        <li><a href="default.asp">Plan your Visit</a></li>
-        <li><a href="news.asp">Learn about the Park</a></li>
-        <li><a href="contact.asp">Get Involved</a></li>
-        </ul>
-      </nav>
+        <a href="#">Plan your Visit</a>
+        <a href="#">Learn About the Park</a>
+        <a href="#">Get Involved</a>
+        </nav>
     </header>
   </div>
   <div class="yosemite-park-guide-box">
