modified index.html and index.css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="box">
-        <div>Plan your Visit</div>
-        <div>Learn About the Park</div>
-        <div>Get Involved</div>
+  <div class="navbar">
+        <div id="plan-your-visit"></div><a href="">Plan your Visit</a>
+        <a href="">Learn About the Park</a>
+        <a href="">Get Involved</a>
   </div>
   <div class="yosemite-park-guide-box">
     <header>
