--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="navbar">
-        <div id="plan-your-visit"></div><a href="">Plan your Visit</a>
-        <a href="">Learn About the Park</a>
-        <a href="">Get Involved</a>
+  <div class="buttonbar">
+    <button class="button1">Plan Your Visit</button>
+    <button class="button2">Learn About the Park</button>
+    <button class="button3">Get Involved</button>
   </div>
   <div class="yosemite-park-guide-box">
     <header>
