--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="buttonbar">
+  <div class="box">
     <button class="button1">Plan Your Visit</button>
     <button class="button2">Learn About the Park</button>
     <button class="button3">Get Involved</button>
