--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <section>
-    <div class="box">
-      <button class="button1">Plan Your Visit</button>
-      <button class="button2">Learn About the Park</button>
-      <button class="button3">Get Involved</button>
+    <div id="flex-container">
+      <div id="button1">Plan Your Visit</div>
+      <div id="button2">Learn About the Park</div>
+      <div id="button3">Get Involved</div>
     </div>
   </section>
    <div class="yosemite-park-guide-box">
