--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <section>
-    <div id="flex-container">
-      <div id="button1">Plan Your Visit</div>
-      <div id="button2">Learn About the Park</div>
-      <div id="button3">Get Involved</div>
+  <div class="box">
+      <button class="button1">Plan Your Visit</button>
+      <button class="button2">Learn About the Park</button>
+      <button class="button3">Get Involved</button>
     </div>
-  </section>
-   <div class="yosemite-park-guide-box">
+  <div class="yosemite-park-guide-box">
     <header>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
       <h1>Yosemite Park Guide</h1>
