--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="box">
-      <button class="button1">Plan Your Visit</button>
-      <button class="button2">Learn About the Park</button>
-      <button class="button3">Get Involved</button>
-    </div>
+<div class="box">
+  <button class="button button1">Plan Your Visit</button>
+  <button class="button button2">Learn About the Park</button>
+  <button class="button button3">Get Involved</button>
+</div>
   <div class="yosemite-park-guide-box">
     <header>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
