changed buttons again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-<div class="box">
+  <div class="top-menu">
   <button class="button button1">Plan Your Visit</button>
   <button class="button button2">Learn About the Park</button>
   <button class="button button3">Get Involved</button>
