--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="top-menu">
-  <button class="button button1">Plan Your Visit</button>
-  <button class="button button2">Learn About the Park</button>
-  <button class="button button3">Get Involved</button>
-</div>
+  <div class="box">
+    <button id="button1" type="button">Plan Your Visit</button>
+    <button id="button2" type="button">Learn About the Park</button>
+    <button id="button3" type="button">Get Involved</button>
+      </div>
   <div class="yosemite-park-guide-box">
     <header>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
