--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="box">
+  <div class="container">
     <button id="button1" type="button">Plan Your Visit</button>
     <button id="button2" type="button">Learn About the Park</button>
     <button id="button3" type="button">Get Involved</button>
@@ -17,11 +17,13 @@
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
     </header>
-  </div>     
-   <div id="not-just-paragraph">
+  </div>  
+  <section>   
+   <div id="image-container">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </div>
+  </section>
   <section>
     <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
     <div id="fire-paragraph">
