--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="container">
-    <button id="button1" type="button">Plan Your Visit</button>
-    <button id="button2" type="button">Learn About the Park</button>
-    <button id="button3" type="button">Get Involved</button>
+  <div class="box">
+    <button class="button1">Plan Your Visit</button>
+    <button class="button2">Learn About the Park</button>
+    <button class="button3">Get Involved</button>
       </div>
   <div class="yosemite-park-guide-box">
     <header>
