--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="box">
-    <button class="button1">Plan Your Visit</button>
-    <button class="button2">Learn About the Park</button>
-    <button class="button3">Get Involved</button>
-      </div>
+  <div class="container">
+    <button class="box1">Plan Your Visit</button>
+    <button class="box2">Learn About the Park</button>
+    <button class="box3">Get Involved</button>
+    </div>
   <div class="yosemite-park-guide-box">
     <header>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
-    </header>
-  </div>  
+    </header>  
   <section>   
    <div id="image-container">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
