--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div class="container">
-    <button class="box1">Plan Your Visit</button>
-    <button class="box2">Learn About the Park</button>
-    <button class="box3">Get Involved</button>
+    <button class="button button1">Plan Your Visit</button>
+    <button class="button button2">Learn About the Park</button>
+    <button class="button button">Get Involved</button>
     </div>
   <div class="yosemite-park-guide-box">
     <header>
