--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
 </head>
 <body>
-  <div class="container">
-    <button class="button button1">Plan Your Visit</button>
-    <button class="button button2">Learn About the Park</button>
-    <button class="button button">Get Involved</button>
+  <div class="buttonbar">
+    <button class="button1">Plan Your Visit</button>
+    <button class="button2">Learn About the Park</button>
+    <button class="button3">Get Involved</button>
     </div>
-  <div class="yosemite-park-guide-box">
-    <header>
-      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
+  <div class="image-container">
+        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
+  </div>
+  <section>
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
-    </header>  
-  <section>   
-   <div id="image-container">
+  </section>   
+   <div id="text-container">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </div>
