--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <button class="button2">Learn About the Park</button>
     <button class="button3">Get Involved</button>
     </div>
-  <div class="image-container">
-        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg"/>
-  </div>
-  <section>
+      <div id="text-container1">
+        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" width="400" height="400">
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
-  </section>   
-   <div id="text-container">
+        </div> 
+   <div id="text-container2">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   </div>
