--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
+  <title>National Parks Page</title>
 </head>
 <body>
   <div class="buttonbar">
