--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="button3">Get Involved</button>
     </div>
       <div id="text-container1">
-        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" width="400" height="400">
+        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" width="250">
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
