--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>National Parks Page</title>
 </head>
 <body>
-  <div class="buttonbar">
-    <button class="button1">Plan Your Visit</button>
-    <button class="button2">Learn About the Park</button>
-    <button class="button3">Get Involved</button>
+  <div class="btn-group"></div>
+    <button>Plan Your Visit</button>
+    <button>Learn About the Park</button>
+    <button>Get Involved</button>
     </div>
-      <div id="text-container1">
+      <div id="text-container">
         <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" width="250">
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
