--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="web-module-project-intro-css\index.css" >
+  <link rel="stylesheet" href="web-module-project-intro-css\index.css">
   <title>National Parks Page</title>
 </head>
 <body>
-  <div class="btn-group"></div>
-    <button>Plan Your Visit</button>
-    <button>Learn About the Park</button>
-    <button>Get Involved</button>
+    <div id="Plan-Your-Visit">
+      <a href="default.asp" target="_blank">Plan Your Visit</a>
     </div>
-      <div id="text-container">
-        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" width="250">
+    <div id="Learn-About-the-Park">
+      <a href="default.asp" target="_blank">Learn About the Park</a>
+    </div>
+    <div id="Get-Involved"></div>
+      <a href="default.asp" target="_blank">Get Involved</a>
+    </div>
+   <div>
+        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" class="img-circle" alt="Yosemite Mountain Picture" style="width:250px">
+        
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
         </div> 
-   <div class="text-container">
+   <div class="great-valley">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-  </div>
-  </section>
-  <section>
-    <p><img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
+    <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
     <div id="fire-paragraph">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
     </div>
-  <section>
-      <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg"/>
+      <img src="https://image.flaticon.com/icons/svg/820/820374.svg"/>
       <div id="bus-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
       </div>
