--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="web-module-project-intro-css\index.css">
   <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   <title>National Parks Page</title>
 </head>
 <body>
@@ -17,26 +21,22 @@
   </div>
 </section>
 <section>
-   <div>
-        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" class="img-circle" alt="Yosemite Mountain Picture" style="width:250px">
-   </div>
-  </section>
-  <section>
-  <div class="Yosemite-Park-Guide">
     <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
+   <div>
+        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" class="img-circle" alt="Yosemite Mountain Picture" style="width:250px"
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not available or required to enter the park.</p>
         </div>
-      </section>
-      <section>
+
+  
    <div class="great-valley">
       <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
         <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-      </section>
-      <div>
-    <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg"/>
+  </section>
+  <div id="campfire">
+    <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
   </div>
     <div id="fire-paragraph">
       <p>Fire is a natural and essential<br>
@@ -47,7 +47,9 @@
            updates about fires in Yosemite. <br>
            Check for current fire restrictions.</p>
     </div>
-      <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg"/><p>
+      <div id="rv">
+      <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv" width="250px"><p>
+      </div>
       <section>
         <div id="bus-paragraph">
       <p>We strongly recommend that you make <br>
@@ -59,7 +61,7 @@
       </div>
     </section>
     <div>
-      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg"/>
+      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains" height="500px" width="100%">
     </div>
       <div class=nav_bar>
         <nav>
