modified html and css to include button changes

--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="web-module-project-intro-css\index.css">
-  <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-  <title>National Parks Page</title>
+<link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">  <title>National Parks Page</title>
 </head>
 <body>
-  <section>
-  <div class=nav_bar>
+  <header>
+    <div class=nav_bar>
     <nav>
-      <a href="#">Plan your Visit</a>
-      <a href="#">Learn about the Park</a>
-      <a href="#">Get Involved</a>
-    </nav> 
+      <button>Plan your Visit</button>
+      <button>Learn about the Park</button>
+      <button>Get Involved</button>
+    </nav>
   </div>
-</section>
+</header>
 <section>
     <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
    <div>
