--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="web-module-project-intro-css\index.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">  <title>National Parks Page</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
+  <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
+  <title>National Parks Page</title>
 </head>
 <body>
   <header>
     <div class=nav_bar>
-    <nav>
-      <button>Plan your Visit</button>
-      <button>Learn about the Park</button>
-      <button>Get Involved</button>
-    </nav>
-  </div>
-</header>
-<section>
-    <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
-   <div>
+      <nav>
+        <button>Plan your Visit</button>
+        <button>Learn about the Park</button>
+        <button>Get Involved</button>
+      </nav>
+    </div>
+  </header>
+<div>
         <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" class="img-circle" alt="Yosemite Mountain Picture" style="width:250px"
       <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
@@ -38,25 +38,14 @@
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
   </div>
     <div id="fire-paragraph">
-      <p>Fire is a natural and essential<br>
-        part of Yosemite. We manage fire <br>
-         carefully and study how it <br>
-         interacts with the park’s<br>
-          ecosystems. This blog provides<br>
-           updates about fires in Yosemite. <br>
-           Check for current fire restrictions.</p>
+      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
     </div>
       <div id="rv">
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv" width="250px"><p>
       </div>
       <section>
         <div id="bus-paragraph">
-      <p>We strongly recommend that you make <br>
-        reservations for lodging, camping, <br>
-        and backpacking. You can pay the <br>
-        park entrance fee upon arrival <br>
-        (there's no need to pay it in<br>
-         advance).</p>
+      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
       </div>
     </section>
     <div>
