--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <div class=nav_bar>
+    <div class=btn-group>
       <nav>
         <button>Plan your Visit</button>
         <button>Learn about the Park</button>
@@ -21,19 +21,19 @@
       </nav>
     </div>
   </header>
-<div>
-        <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" class="img-circle" alt="Yosemite Mountain Picture" style="width:250px"
-      <h1>Yosemite Park Guide</h1>
+        <div class="content_1">
+    <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" style="width:250px">
+    <section class="content_1_box text_content">
+    <header><h1>Yosemite Park Guide</h1></header>
         <p>Come explore California’s beautiful wilderness.</p>
-        <p>Always open. Reservations are not available or required to enter the park.</p>
+        <p>Always open. Reservations are not<p>
+          <p> available or required to enter the</p>
+          <p>park.</p>
         </div>
-
-  
+      </section>
    <div class="great-valley">
-      <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
-        <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-  </section>
   <div id="campfire">
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
   </div>
@@ -43,11 +43,9 @@
       <div id="rv">
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv" width="250px"><p>
       </div>
-      <section>
         <div id="bus-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
       </div>
-    </section>
     <div>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains" height="500px" width="100%">
     </div>
