--- a/index.html
+++ b/index.html
@@ -24,38 +24,39 @@
         <div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" style="width:250px" >
     <section class="content_1_box text_content">
-    <header><h1>Yosemite Park Guide</h1></header>
+    <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not<p>
           <p> available or required to enter the</p>
           <p>park.</p>
         </div>
       </section>
-   <div class="great-valley">
+   <div id="great-valley">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
   <div id="campfire">
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
   </div>
     <div id="fire-paragraph">
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</span></p>
     </div>
       <div id="rv">
       <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv" width="250px"><p>
       </div>
         <div id="bus-paragraph">
-      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
+      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
       </div>
     <div>
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains" height="500px" width="100%">
     </div>
-      <div class=nav_bar>
-        <nav>
-          <a href="#">Plan your Visit</a>
-          <a href="#">Learn about the Park</a>
-          <a href="#">Get Involved</a>
-        </nav> 
-      </div>
-    </footer>
+    <footer>
+      <div class=btn-group>
+          <nav>
+            <button>Plan your Visit</button>
+            <button>Learn about the Park</button>
+            <button>Get Involved</button>
+          </nav>
+        </div>
+      </footer>
 </body>
 </html>
