latest changes to html and css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
   <header>
-    <div class=btn-group>
+    <div id="btn-group">
       <nav>
-        <button>Plan your Visit</button>
-        <button>Learn about the Park</button>
-        <button>Get Involved</button>
+        <button id="plan">Plan your Visit</button>
+        <button id="learn">Learn about the Park</button>
+        <button id="get">Get Involved</button>
       </nav>
     </div>
   </header>
