modified html and css

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
   <title>National Parks Page</title>
 </head>
 <body>
-  <header>
-    <div id="btn-group">
+    <div class="container">
       <nav>
-        <button id="plan">Plan your Visit</button>
-        <button id="learn">Learn about the Park</button>
-        <button id="get">Get Involved</button>
+        <button class="button-plan">Plan your Visit</button>
+        <button class="button-learn">Learn about the Park</button>
+        <button class="button-get">Get Involved</button>
       </nav>
     </div>
   </header>
+  </section>
+
         <div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" style="width:250px" >
     <section class="content_1_box text_content">
