--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
   <title>National Parks Page</title>
 </head>
 <body>
-    <div class="container">
       <nav>
-        <button class="button-plan">Plan your Visit</button>
-        <button class="button-learn">Learn about the Park</button>
-        <button class="button-get">Get Involved</button>
+        <a href="#" button class="button-plan">Plan your Visit</button></a>
+        <a href="#" button class="button-learn">Learn about the Park</button></a>
+        <a href="#" button class="button-get">Get Involved</button></a>
       </nav>
-    </div>
   </header>
   </section>
 
