more html and css changes after css and html validator checking

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="web-module-project-intro-css\index.css">
+  <link rel="stylesheet" href="web-module-project-intro-css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -12,27 +12,29 @@
   <title>National Parks Page</title>
 </head>
 <body>
-      <nav>
-        <a href="#" button class="button-plan">Plan your Visit</button></a>
-        <a href="#" button class="button-learn">Learn about the Park</button></a>
-        <a href="#" button class="button-get">Get Involved</button></a>
-      </nav>
-  </header>
-  </section>
-
+  <header>
+    <div class="header-buttons">
+        <nav>
+          <button>Plan your Visit</button>
+          <button>Learn about the Park</button>
+          <button>Get Involved</button>
+        </nav>
+      </div>
+    </header>
         <div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" style="width:250px" >
+        </div>
     <section class="content_1_box text_content">
     <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not<p>
           <p> available or required to enter the</p>
           <p>park.</p>
-        </div>
       </section>
    <div id="great-valley">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+   </div>
   <div id="campfire">
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
   </div>
