--- a/index.html
+++ b/index.html
@@ -35,21 +35,17 @@
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
    </div>
-  <div id="campfire">
-    <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire" width="250px">
-  </div>
+  <section class="campfire-and-rv-paragraphs">
+    <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire">
     <div id="fire-paragraph">
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</span></p>
+      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
     </div>
-      <div id="rv">
-      <p><img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv" width="250px"><p>
-      </div>
-        <div id="bus-paragraph">
+      <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv">
+        <div id="rv-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
       </div>
-    <div>
-      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains" height="500px" width="100%">
-    </div>
+</section>
+      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains">
     <footer>
       <div class=btn-group>
           <nav>
