latest website changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
         <div class="content_1">
-    <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture" style="width:250px" >
+    <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture">
         </div>
     <section class="content_1_box text_content">
     <h1>Yosemite Park Guide</h1>
@@ -45,7 +45,9 @@
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
       </div>
 </section>
+<div class="mountain-picture">
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains">
+      </div>
     <footer>
       <div class=btn-group>
           <nav>
