added header and footer buttons and css with those

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="web-module-project-intro-css">
+  <link rel="stylesheet" type="text/css" href="index.css"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -11,20 +11,17 @@
   <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
   <title>National Parks Page</title>
 </head>
+
 <body>
-  <header>
-    <div class="header-buttons">
-        <nav>
-          <button>Plan your Visit</button>
-          <button>Learn about the Park</button>
-          <button>Get Involved</button>
-        </nav>
-      </div>
-    </header>
-        <div class="content_1">
+<div class="header-buttons">
+        <button class="plan">Plan your Visit</button>
+        <button class="learn">Learn about the Park</button>
+        <button class="get">Get Involved</button>
+</div>
+<div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture">
-        </div>
-    <section class="content_1_box text_content">
+</div>
+<section class="content_1_box text_content">
     <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not<p>
@@ -40,6 +37,7 @@
     <div id="fire-paragraph">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
     </div>
+    <section class="rv-picture"></section>
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv">
         <div id="rv-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
@@ -49,13 +47,11 @@
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains">
       </div>
     <footer>
-      <div class=btn-group>
-          <nav>
-            <button>Plan your Visit</button>
-            <button>Learn about the Park</button>
-            <button>Get Involved</button>
-          </nav>
-        </div>
-      </footer>
-</body>
+      <div class="footer-buttons">
+        <button class="plan">Plan your Visit</button>
+        <button class="learn">Learn about the Park</button>
+        <button class="get">Get Involved</button>
+      </div>
+    </footer>
+  </body>
 </html>
