more formatting with fire paragraph and rv paragraph

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
    </div>
   <section class="campfire-and-rv-paragraphs">
+    <div class="fire-picture">
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire">
+    </div>
     <div id="fire-paragraph">
       <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
     </div>
-    <section class="rv-picture"></section>
+  </section>
+    <section class="rv-picture">
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv">
         <div id="rv-paragraph">
       <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
