changes involving header and footer buttons, footer picture, header picture and other

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
 </section>
 <div class="mountain-picture">
-      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountains">
+      <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountain" class="responsive">
       </div>
     <footer>
       <div class="footer-buttons">
