more changes involving rounded picture and text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture">
 </div>
-<section class="content_1_box text_content">
+<section class="content_1_box_text_content">
     <h1>Yosemite Park Guide</h1>
         <p>Come explore California’s beautiful wilderness.</p>
         <p>Always open. Reservations are not<p>
