--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 </div>
 <section class="content_1_box_text_content">
     <h1>Yosemite Park Guide</h1>
+    <br>
         <p>Come explore California’s beautiful wilderness.</p>
+        <br>
         <p>Always open. Reservations are not<p>
           <p> available or required to enter the</p>
           <p>park.</p>
       </section>
    <div id="great-valley">
       <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      <br>
         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
    </div>
   <section class="campfire-and-rv-paragraphs">
@@ -37,7 +40,8 @@
     <img src="https://image.flaticon.com/icons/svg/2979/2979348.svg" alt="campfire">
     </div>
     <div id="fire-paragraph">
-      <p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
+      <p>Fire is a natural and essential<br>part of Yosemite.  We manage fire<br>carefully and study how it<br>
+        interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
     </div>
   </section>
     <section class="rv-picture">
