--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link href="https://fonts.google.com/specimen/Roboto+Mono" rel="stylesheet">
-  <link href="https://fonts.google.com/specimen/Chelsea+Market" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto+Mono">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Chelsea+Market">
   <title>National Parks Page</title>
 </head>
 
