worked with paragraphs and images above paragraphs

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     </div>
     <div id="fire-paragraph">
       <p>Fire is a natural and essential<br>part of Yosemite.  We manage fire<br>carefully and study how it<br>
-        interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for <span id="bold1"></span>current fire restrictions.</p>
+        interacts with the park’s ecosystems. This blog provides<br> updates about fires in Yosemite.<br>Check for <span id="bold1"></span>current fire restrictions.</p>
     </div>
   </section>
     <section class="rv-picture">
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv">
+  </section>
         <div id="rv-paragraph">
-      <p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span id="bold2"></span>park entrance fee<span>upon arrival (there's no need to pay it in advance).</span></p>
+      <p>We strongly recommend that you make<br>reservations for lodging, camping,<br>and backpacking. You can pay the<br><span id="bold2"></span>park entrance fee<span>upon arrival<br>(there's no need to pay it in<br>advance).</p>
       </div>
-</section>
 <div class="mountain-picture">
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountain" class="responsive">
       </div>
