added header and footer work and paragraph work

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 
 <body>
+  <section class="container">
 <div class="header-buttons">
         <button class="plan">Plan your Visit</button>
         <button class="learn">Learn about the Park</button>
         <button class="get">Get Involved</button>
 </div>
+</section>
 <div class="content_1">
     <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/header_img.jpg" alt="Yosemite Mountain Picture">
 </div>
@@ -48,17 +50,19 @@
       <img src="https://image.flaticon.com/icons/svg/820/820374.svg" alt="rv">
   </section>
         <div id="rv-paragraph">
-      <p>We strongly recommend that you make<br>reservations for lodging, camping,<br>and backpacking. You can pay the<br><span id="bold2"></span>park entrance fee<span>upon arrival<br>(there's no need to pay it in<br>advance).</p>
+      <p>We strongly recommend that you make<br>reservations for lodging, camping,<br>and backpacking. You can pay the<br><span id="bold2"></span>park entrance fee<span> upon arrival<br>(there's no need to pay it in<br>advance).</p>
       </div>
 <div class="mountain-picture">
       <img src="https://raw.githubusercontent.com/hleslie5/web-module-project-intro-css/main/assets/footer_img.jpg" alt="mountain" class="responsive">
       </div>
     <footer>
+      <section class="container">
       <div class="footer-buttons">
         <button class="plan">Plan your Visit</button>
         <button class="learn">Learn about the Park</button>
         <button class="get">Get Involved</button>
       </div>
+      </section>
     </footer>
   </body>
 </html>
