--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <section class="container">
 <div class="header-buttons">
-        <button class="plan">Plan your Visit</button>
-        <button class="learn">Learn about the Park</button>
-        <button class="get">Get Involved</button>
+        <button class="plan">Plan your<br> Visit</button>
+        <button class="learn">Learn about<br>the Park</button>
+        <button class="get">Get<br>Involved</button>
 </div>
 </section>
 <div class="content_1">
@@ -58,9 +58,9 @@
     <footer>
       <section class="container">
       <div class="footer-buttons">
-        <button class="plan">Plan your Visit</button>
-        <button class="learn">Learn about the Park</button>
-        <button class="get">Get Involved</button>
+        <button class="plan">Plan your<br>Visit</button>
+        <button class="learn">Learn about<br>the Park</button>
+        <button class="get">Get<br>Involved</button>
       </div>
       </section>
     </footer>
